# merchantportal-api

./: .env.example  .gitignore  API-ENDPOINTS.md  AWS-EC2-SETUP.md  CHANGELOG.md  CRUD-FLOW.md  Cargo.toml  Dockerfile  Dockerfile.arm64  Dockerfile.x86_64  LICENSE  QUICK-START.md  README-DOCKER.md  README.md  deploy-arm64.sh  deploy-x86.sh  docker-compose.arm64.yml  docker-compose.x86_64.yml  docker-compose.yml
src/: README.md  app_state.rs  constants.rs  error.rs  main.rs  middleware.rs  rate_limiter.rs  startup.rs
src/handlers/: README.md  health_handler.rs  mod.rs  promo_handler.rs  promo_store_handler.rs  promo_tenor_handler.rs  store_handler.rs
src/model/: README.md  mod.rs  promo_model.rs  promo_store_model.rs  promo_tenor_model.rs  store_model.rs
src/repositories/: README.md  cache_repository.rs  mod.rs  promo_repository.rs  promo_store_repository.rs  promo_tenor_repository.rs  store_repository.rs
src/services/: README.md  mod.rs  promo_service.rs  promo_store_service.rs  promo_tenor_service.rs  store_service.rs
src/supabase/: README.md  error.rs  mod.rs  server.rs  supabase_client.rs
