[package]
name = "merchantportal-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15" # Untuk membaca file .env
supabase_rs = "0.4.16"
jsonwebtoken = "9.2"
axum-extra = { version = "0.9", features = ["typed-header"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
openssl = { version = "0.10", features = ["vendored"] }