[package]
name = "merchantportal-api"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = "0.4.42"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
dotenvy = "0.15.7"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
thiserror = "2.0.17"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "limit"] }
axum-governor = "1"
lazy-limit = "1"
real = { version = "0.1", features = ["axum"] }